@@ -1,19 +1,0 @@
-TEMPLATE = lib
-
-CONFIG += thread warn_on plugin
-QMAKE_CXXFLAGS += -Os
-
-HEADERS += WAD.h
-
-SOURCES += WAD.cpp
-
-TARGET = WAD.0.27
-
-INCLUDEPATH += ../../../lib
-
-LIBS += -L../../../lib -lqtstalker
-
-unix:linux-g++:LIBS += -ldl
-
-target.path = /usr/lib/qtstalker/indicator
-INSTALLS += target
